--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kilòmetre Solidari | Associació Juveni Esquitx Sabadell</title>
+  <title>Kilòmetre Solidari - Associació Juveni Esquitx Sabadell</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon/favicon-32x32.png">
@@ -155,7 +155,7 @@
 		  		<h1><a href="#top" class="btn-anchor" title="Kilòmetre Solidari">#KMSOLIDARI</a></h1>
 			</div>
 			<div class="navbar-right">
-				<a href="#" title="Obrir menú principal" class="open-overlay">&#9776;</a>
+				<a href="#" title="Obrir menú principal" class="open-overlay" id="menu">&#9776;</a>
 			</div>
 		</div>
   </nav>
@@ -166,13 +166,13 @@
 		</div>
 		<div class="text-center">
 			<ul class="list-unstyled">
-				<li><a href="#info" title="Secció Presentació">Presentació</a></li>
-				<li><a href="#dades" title="Secció El projecte en xifres">El projecte en xifres</a></li>
-				<li><a href="#fotos" title="Secció Fotografies">Fotografies</a></li>
-				<li><a href="#experiencies" title="Secció Experiències del kilòmetre">Experiències del kilòmetre</a></li>
-				<li><a href="#guia" title="Secció Guia">Guia Kilòmetre Solidari</a></li>
-				<li><a href="#llibre" title="Secció Llibre 'Darrere cada quilòmetre'">Llibre 'Darrere cada quilòmetre'</a></li>
-				<li><a href="#contacte" title="Secció Contacte amb l'Esquitx">Contacte amb l'Esquitx</a></li>
+				<li><a id="menu_info" href="#info" title="Secció Presentació">Presentació</a></li>
+				<li><a id="menu_dades" href="#dades" title="Secció El projecte en xifres">El projecte en xifres</a></li>
+				<li><a id="menu_fotos" href="#fotos" title="Secció Fotografies">Fotografies</a></li>
+				<li><a id="menu_experiencies" href="#experiencies" title="Secció Experiències del kilòmetre">Experiències del kilòmetre</a></li>
+				<li><a id="menu_guia" href="#guia" title="Secció Guia">Guia Kilòmetre Solidari</a></li>
+				<li><a id="menu_llibre" href="#llibre" title="Secció Llibre 'Darrere cada quilòmetre'">Llibre 'Darrere cada quilòmetre'</a></li>
+				<li><a id="menu_contacte" href="#contacte" title="Secció Contacte amb l'Esquitx">Contacte amb l'Esquitx</a></li>
 			</ul>
 		</div>
 		<div class="text-center separated-top-x2">
