--- a/source/index.html
+++ b/source/index.html
@@ -19,8 +19,8 @@
 	<meta property="og:description" content="Correm la Cursa de la Festa Major i recollim diners per finançar l'Esquitx" />
 	<meta property="og:image" content="https://kilometresolidari-staticweb.web.app/assets/images/kmsolidari.png" />
 
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/css/lightbox.min.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -190,7 +190,7 @@
 	</div>
 	 
 	<div id="navside" class="navside">
-		<ul class="nav 2v-stacked list-unstyled">
+		<ul class="list-unstyled">
 			<li><a href="#info" class="btn-anchor" title="Presentació" data-toggle="tooltip" data-placement="right"></a></li>
 			<li><a href="#dades" class="btn-anchor" title="El&nbsp;projecte&nbsp;en&nbsp;xifres" data-toggle="tooltip" data-placement="right"></a></li>
 			<li><a href="#fotos" class="btn-anchor" title="Fotografies" data-toggle="tooltip" data-placement="right"></a></li>
@@ -490,16 +490,14 @@
 				<div id="twitter-carrusel" class="carousel slide separated-top text-center" data-ride="carousel">
 				  
 					<div id="twitter-content" class="carousel-inner" role="listbox">						
-						<div class="item active"><div id="twitter-loader" class="loader hidden"></div></div>
+						<div class="carousel-item active"><div id="twitter-loader" class="loader hidden"></div></div>
 					</div>
 
-					<a class="left carousel-control" href="#twitter-carrusel" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Anterior</span>
+					<a class="carousel-control-prev" href="#twitter-carrusel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon"></span>
 					</a>
-					<a class="right carousel-control" href="#twitter-carrusel" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Següent</span>
+					<a class="carousel-control-next" href="#twitter-carrusel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon"></span>
 					</a>
 				</div>
 			</section>
@@ -509,11 +507,11 @@
 	    <div id="buscador" class="container-fluid">
 		   <section>
 				<h2 class="text-center">No has trobat el què buscaves?</h2>
-				<div id="buscador-formulari" class="row text-center">
+				<div id="buscador-formulari" class="text-center">
 					<input id="q" type="text">
 					<button id="search">Buscar</button>
 				</div>
-				<div id="buscador-content" class="row"></div>
+				<div id="buscador-content"></div>
 			</section>
 		</div>
 	</main>
@@ -527,15 +525,16 @@
 		</ul>
 	</footer>
 
-  <!--disabled
+	<!--disabled
 	<span id="float-button" class="hidden">
    		<a id="share-btn" href="https://www.migranodearena.org/reto/18664/mou-te-per-lesquitx-kilometre-solidari-2018" target="_blank" data-ga="click" data-ga-action="link" data-ga-label="Compra" data-ga-category="Float button"><i class="btn btn-float fa fa-shopping-cart"></i></a>
 	</span>
 	-->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/f0f358dacc.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/js/lightbox.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/unveil/1.3.0/jquery.unveil.min.js" type="text/javascript"></script>
