--- a/source/index.html
+++ b/source/index.html
@@ -202,6 +202,29 @@
 	</div>
 
 	<main>
+
+		<div id="token_div" style="display: none;">
+			<h4>Instance ID Token</h4>
+			<pre id="token"></pre>
+			<button onclick="copyToken()">Copy token</button>
+			<button onclick="deleteToken()">Delete Token</button>
+		  </div>
+	
+		  <div id="permission_div" style="display: none;">
+			<h4>Needs Permission</h4>
+			<pre id="token"></pre>
+			<button onclick="requestPermission()">Request Permission</button>
+		  </div>
+	
+		  <div>
+			<h4>Subscription</h4>
+			<pre id="subscription"></pre>
+			<input type="text" id="topicName" value="movies">
+			<button onclick="subscribeToTopic(document.getElementById('topicName').value)">Subscrive to topic</button>    
+		  </div>
+	
+		  <div id="messages"></div>
+
 		<!-- Jumbotron -->
 		<div id="jumbotron" class="text-center">
 			<section>
@@ -537,9 +560,10 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js' type="text/javascript"></script>
 	<!--<script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b1bf2be4264b0a4" type="text/javascript"></script>-->
 
-	<script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-analytics.js"></script>	
+	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>	
+	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-messaging.js"></script>
 	<script src="https://www.google.com/recaptcha/api.js?render=${process.env.APIKEYRECAPTCHA}"></script>
 </body>
 </html> 
