--- a/source/index.html
+++ b/source/index.html
@@ -539,10 +539,10 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js' type="text/javascript"></script>
 	<!--<script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b1bf2be4264b0a4" type="text/javascript"></script>-->
 
-	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+	<!--<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-database.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>	
-	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-messaging.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-messaging.js"></script>-->
 	<script src="https://www.google.com/recaptcha/api.js?render=${process.env.APIKEYRECAPTCHA}"></script>
 </body>
 </html> 
