--- a/source/index.html
+++ b/source/index.html
@@ -216,7 +216,7 @@
 				<div class="row">
 		    		<div class="col-sm-12">
 						<article>
-							<h2>Presentació</h2>
+							<h2>Presentació:</h2>
 							<p>El Kilòmetre Solidari és un projecte que combina esport i solidaritat per finançar projectes de l'<a href="http://www.esquitxsbd.org" target="_blank" title="Web de l'Associació Juvenil Esquitx de Sabadell" data-ga="click" data-ga-action="link">Associació Juvenil Esquitx</a>. Una entitat de lleure que treballa per la igualtat d’oportunitats d’infants i joves de la ciutat de Sabadell.</p>
 							<p>En les seves 5 edicions ens ha permès recaptar 20.000€ gràcies a la col·laboració de 250 voluntaris i 15 patrocinadors.</p>
 						</article>
